log/build_2024-05-01_19-52-19/xbox/stdout_stderr.log
running egg_info
writing ../../build/xbox/xbox.egg-info/PKG-INFO
writing dependency_links to ../../build/xbox/xbox.egg-info/dependency_links.txt
writing entry points to ../../build/xbox/xbox.egg-info/entry_points.txt
writing requirements to ../../build/xbox/xbox.egg-info/requires.txt
writing top-level names to ../../build/xbox/xbox.egg-info/top_level.txt
reading manifest file '../../build/xbox/xbox.egg-info/SOURCES.txt'
writing manifest file '../../build/xbox/xbox.egg-info/SOURCES.txt'
running build
running build_py
copying xbox/new_control.py -> /home/nvidia/master_ws/build/xbox/build/lib/xbox
running install
running install_lib
copying /home/nvidia/master_ws/build/xbox/build/lib/xbox/new_control.py -> /home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox
byte-compiling /home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox/new_control.py to new_control.cpython-38.pyc
  File "/home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox/new_control.py", line 111
    [5.772433   4.5977125  4.7312922  1.7574326  0.97158563 0.95507544
                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/xbox/xbox.egg-info to /home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox-0.0.0-py3.8.egg-info
running install_scripts
Installing control script to /home/nvidia/master_ws/install/xbox/lib/xbox
Installing new_control script to /home/nvidia/master_ws/install/xbox/lib/xbox
writing list of installed files to '/home/nvidia/master_ws/build/xbox/install.log'
